# alphazero_llm_trainer

./: .gitignore  LICENSE  LICENSE.md  PROJECT_ARCHITECTURE.md  README.md  alphazero_llm_trainer.py  pyproject.toml
environments/alphazero_llm_trainer/: .gitignore  README.md  TRAINING_CONFIG_INTEGRATION.md  __init__.py  alphazero_llm_trainer.py  eval.sh  eval_examples.py  gsm8k_comparison_results.json  pyproject.toml  requirements.txt  setup_vllm.sh  test.py  test_config_only.py  test_gsm8k.py  train_and_stop.sh  train_vllm.py  train_with_mcts_OLD.py
environments/alphazero_llm_trainer/config/: __init__.py  models.yaml  teacher_models.yaml  training.yaml
environments/alphazero_llm_trainer/core/: __init__.py  environment.py  mcts.py  tree.py
environments/alphazero_llm_trainer/models/: __init__.py  student_model.py  teacher_ensemble_OLD.py  teacher_ensemble_prime.py  teacher_ensemble_vllm.py  terminal_checker_OLD.py  terminal_checker_vllm.py
environments/alphazero_llm_trainer/outputs/evals/alphazero-llm-trainer--anthropic--claude-sonnet-4.5/23793d76/: metadata.json  results.jsonl
environments/alphazero_llm_trainer/outputs/evals/alphazero-llm-trainer--anthropic--claude-sonnet-4.5/8028b5e0/: metadata.json  results.jsonl
environments/alphazero_llm_trainer/outputs/evals/alphazero-llm-trainer--google--gemini-2.0-flash-001/817fb689/: metadata.json  results.jsonl
environments/alphazero_llm_trainer/outputs/evals/alphazero-llm-trainer--google--gemini-2.0-flash-001/e7e25da9/: metadata.json  results.jsonl
environments/alphazero_llm_trainer/outputs/evals/alphazero-llm-trainer--google--gemini-2.5-pro/eb24e024/: metadata.json  results.jsonl
environments/alphazero_llm_trainer/outputs/evals/alphazero-llm-trainer--google--gemini-3-pro-preview/96123796/: metadata.json  results.jsonl
environments/alphazero_llm_trainer/outputs/evals/alphazero-llm-trainer--google--gemini-3-pro-preview/fb26e9f5/: metadata.json  results.jsonl
environments/alphazero_llm_trainer/outputs/evals/alphazero-llm-trainer--qwen--qwen3-30b-a3b-thinking-2507/04ac0c5d/: metadata.json  results.jsonl
environments/alphazero_llm_trainer/outputs/evals/alphazero-llm-trainer--qwen--qwen3-30b-a3b-thinking-2507/4a8ddb56/: metadata.json  results.jsonl
environments/alphazero_llm_trainer/outputs/evals/alphazero-llm-trainer--qwen--qwen3-30b-a3b-thinking-2507/d74b1fcb/: metadata.json  results.jsonl
environments/alphazero_llm_trainer/outputs/evals/alphazero-llm-trainer--x-ai--grok-4/18c47eaf/: metadata.json  results.jsonl
environments/alphazero_llm_trainer/outputs/evals/alphazero-llm-trainer--x-ai--grok-4/c75afbfc/: metadata.json  results.jsonl
environments/alphazero_llm_trainer/prompts/: __init__.py  terminal_check.py  token_gen.py
environments/alphazero_llm_trainer/results/: readme.md
environments/alphazero_llm_trainer/rewards/: __init__.py  combined.py  hre.py  pre.py  rubric_functions.py
environments/alphazero_llm_trainer/utils/: __init__.py  answer_extraction.py  dataset_loader.py  similarity.py
