[project]
name = "mcts-rlhf-environment"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.2.0",
    "numpy>=2.3.4",
    "openai>=2.5.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "unsloth>=2024.8",
    "verifiers>=0.1.5.post0",
    "pyyaml>=6.0.0",
]
